# Snailgine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
Editor/: CMakeLists.txt
Editor/src/: Main.cpp
Engine/: CMakeLists.txt  vcpkg.json
Engine/include/: Snailgine.hpp
Engine/include/Snailgine/: Base.hpp  Entry.hpp  PCH.hpp
Engine/include/Snailgine/Core/: Application.hpp  Base.hpp  Entry.hpp  Input.hpp  KeyCode.hpp  Log.hpp  Memory.hpp  MouseCode.hpp  Window.hpp
Engine/include/Snailgine/Debug/: Instrumentor.hpp
Engine/include/Snailgine/Event/: Event.hpp  EventBaseFunction.hpp  EventBus.hpp  EventMemberFunction.hpp
Engine/include/Snailgine/Event/App/: AppRenderEvent.hpp  AppTickEvent.hpp  AppUpdateEvent.hpp
Engine/include/Snailgine/Event/Keyboard/: KeyEvent.hpp  KeyPressedEvent.hpp  KeyReleasedEvent.hpp  KeyTypedEvent.hpp
Engine/include/Snailgine/Event/Mouse/: MouseButtonEvent.hpp  MouseButtonPressedEvent.hpp  MouseButtonReleasedEvent.hpp  MouseMovedEvent.hpp  MouseScrolledEvent.hpp
Engine/include/Snailgine/Event/Window/: WindowCloseEvent.hpp  WindowResizeEvent.hpp
Engine/include/Snailgine/GLFW/: GLFWWindow.hpp
Engine/include/Snailgine/Graphic/: Context.hpp  Graphic.hpp  RenderCommand.hpp  Renderer.hpp  Shader.hpp  Window.hpp
Engine/include/Snailgine/Graphic/OpenGL/: OpenGL.hpp  OpenGLContext.hpp  OpenGLShader.hpp
Engine/include/Snailgine/ImGui/: ImGuiLayer.hpp
Engine/include/Snailgine/Layer/: Layer.hpp  LayerStack.hpp
Engine/include/Snailgine/Math/: Mat4.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Engine/include/Snailgine/Platform/Windows/: WindowsInput.hpp  WindowsWindow.hpp
Engine/src/: Snailgine.hpp
Engine/src/Core/: Application.cpp  Input.cpp  Log.cpp  Window.cpp
Engine/src/Debug/: Instrumentor.cpp
Engine/src/Event/: Event.cpp  EventBaseFunction.cpp  EventBus.cpp
Engine/src/Event/App/: AppRenderEvent.cpp  AppTickEvent.cpp  AppUpdateEvent.cpp
Engine/src/Event/Keyboard/: KeyEvent.cpp  KeyPressedEvent.cpp  KeyReleasedEvent.cpp  KeyTypedEvent.cpp
Engine/src/Event/Mouse/: MouseButtonEvent.cpp  MouseButtonPressedEvent.cpp  MouseButtonReleasedEvent.cpp  MouseMovedEvent.cpp  MouseScrolledEvent.cpp
Engine/src/Event/Window/: WindowCloseEvent.cpp  WindowResizeEvent.cpp
Engine/src/GLFW/: GLFWWindow.cpp
Engine/src/Graphic/: Context.cpp  Graphic.cpp  RenderCommand.cpp  Renderer.cpp  Shader.cpp  Window.cpp
Engine/src/Graphic/OpenGL/: OpenGL.cpp  OpenGLContext.cpp  OpenGLShader.cpp
Engine/src/ImGui/: ImGuiLayer.cpp
Engine/src/Layer/: Layer.cpp  LayerStack.cpp
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Engine/src/Snailgine/: PCH.hpp
Engine/src/Snailgine/Core/: Application.cpp  Application.hpp  Base.hpp  Input.cpp  Input.hpp  KeyCode.hpp  Log.cpp  Log.hpp  MouseCode.hpp  Window.cpp  Window.hpp
Engine/src/Snailgine/Debug/: Instrumentor.cpp  Instrumentor.hpp
Engine/src/Snailgine/Event/: Event.cpp  Event.hpp  EventBaseFunction.cpp  EventBaseFunction.hpp  EventBus.cpp  EventBus.hpp  EventMemberFunction.cpp  EventMemberFunction.hpp
Engine/src/Snailgine/Event/App/: AppRenderEvent.cpp  AppRenderEvent.hpp  AppTickEvent.cpp  AppTickEvent.hpp  AppUpdateEvent.cpp  AppUpdateEvent.hpp
Engine/src/Snailgine/Event/Keyboard/: KeyEvent.cpp  KeyEvent.hpp  KeyPressedEvent.cpp  KeyPressedEvent.hpp  KeyReleasedEvent.cpp  KeyReleasedEvent.hpp  KeyTypedEvent.cpp  KeyTypedEvent.hpp
Engine/src/Snailgine/Event/Mouse/: MouseButtonEvent.cpp  MouseButtonEvent.hpp  MouseButtonPressedEvent.cpp  MouseButtonPressedEvent.hpp  MouseButtonReleasedEvent.cpp  MouseButtonReleasedEvent.hpp  MouseMovedEvent.cpp  MouseMovedEvent.hpp  MouseScrolledEvent.cpp  MouseScrolledEvent.hpp
Engine/src/Snailgine/Event/Window/: WindowCloseEvent.cpp  WindowCloseEvent.hpp  WindowFocusEvent.cpp  WindowFocusEvent.hpp  WindowLostFocusEvent.cpp  WindowLostFocusEvent.hpp  WindowMovedEvent.cpp  WindowMovedEvent.hpp  WindowResizeEvent.cpp  WindowResizeEvent.hpp
Engine/src/Snailgine/Graphic/: BufferElement.cpp  BufferElement.hpp  BufferLayout.cpp  BufferLayout.hpp  Context.cpp  Context.hpp  Framebuffer.cpp  Framebuffer.hpp  FramebufferAttachmentSpecification.cpp  FramebufferAttachmentSpecification.hpp  FramebufferSpecification.hpp  FramebufferTextureFormat.hpp  FramebufferTextureSpecification.cpp  FramebufferTextureSpecification.hpp  Graphic.cpp  Graphic.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderDataType.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Engine/src/Snailgine/Graphic/OpenGL/: IndexBufferOpenGL.cpp  IndexBufferOpenGL.hpp  OpenGL.cpp  OpenGL.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp  VertexBufferOpenGL.cpp  VertexBufferOpenGL.hpp
Engine/src/Snailgine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Engine/src/Snailgine/Layer/: Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
Engine/src/Snailgine/Math/: Mat4.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Engine/src/Snailgine/Platform/: WindowWindows.cpp  WindowWindows.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Engine/src/Snailgine/Platform/Windows/: WindowsInput.cpp  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.hpp
